shareButton: Fix alignment
* closes https://github.com/inveniosoftware/invenio-rdm-records/issues/537

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
@@ -173,3 +173,8 @@
         margin: 1em auto;
     }
 }
+
+.share-button {
+    display: inline-block;
+    float: right;
+}
